--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,12 @@ dependencies:
   shared_preferences: ^2.2.3
   geolocator: ^12.0.0
   lottie: ^3.1.2
+  json_annotation: ^4.9.0
+  freezed_annotation: ^2.4.4
+  freezed: ^2.5.2
+  get_it: ^7.7.0
+  injectable: ^2.4.4
+  get: ^4.6.6
 
 dev_dependencies:
   flutter_test:
@@ -53,6 +59,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^3.0.0
+  build_runner: ^2.4.11
+  json_serializable: ^6.8.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
